move vrDevice logic into own module

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 
     <script type="text/javascript" src="libs/lodash.js"></script>
     <script type="text/javascript" src="libs/three.js"></script>
-    <script type="text/javascript" src="libs/controls/OrbitControls.js"></script>
+    <script type="text/javascript" src="libs/OrbitControls.js"></script>
     <script type="text/javascript" src="libs/leap-0.6.4.js"></script>
     <script type="text/javascript" src="libs/leap-plugins-0.1.11pre.js"></script>
     <script type="text/javascript" src="libs/VRRenderer.js"></script>
