add loading screen

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
+    <div id="loading">
+      Loading
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
     <div id="viewport"></div>
     <div id="hud">
       <button id="vr-toggle">Toggle VR</button>
