--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
     }
     </script>
 
+    <script type="text/javascript" src="libs/tween.min.js"></script>
     <script type="text/javascript" src="libs/dat.gui.js"></script>
     <script type="text/javascript" src="libs/three.js"></script>
     <script type="text/javascript" src="libs/OrbitControls.js"></script>
