add stub code for object loaders. stagger planet fade in

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,10 @@
     <script type="text/javascript" src="libs/leap-0.6.4.js"></script>
     <script type="text/javascript" src="libs/leap-plugins-0.1.11pre.js"></script>
     <script type="text/javascript" src="libs/VRRenderer.js"></script>
+    <script type="text/javascript" src="libs/DDSLoader.js"></script>
+    <script type="text/javascript" src="libs/MTLLoader.js"></script>
+    <script type="text/javascript" src="libs/OBJLoader.js"></script>
+    <script type="text/javascript" src="libs/OBJMTLLoader.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
