set up video texture

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
       <button id="vr-toggle">Toggle VR</button>
     </div>
 
+    <video id="video" autoplay loop style="display:none;">
+			<source src="assets/video/webvr-600.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+		</video>
+
     <script id="glowVertexShader" type="x-shader/x-vertex">
       uniform vec3 viewVector;
       uniform float c;
