add directional light

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
     </div>
 
     <video id="video" autoplay loop style="display:none;">
-			<source src="assets/video/webvr-600.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+			<!--<source src="assets/video/alphatest.mov" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>-->
+			<source src="assets/video/alphatest.mov">
 		</video>
 
     <script id="glowVertexShader" type="x-shader/x-vertex">
