add button to reset camera

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <div id="viewport"></div>
     <div id="hud">
       <button id="vr-toggle">Toggle VR</button>
+      <button id="reset-camera">Reset Camera</button>
     </div>
 
     <video id="video" autoplay loop style="display:none;">
