add VideoController. Play/pause video instead of changing material opacity

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
       <button id="reset-camera">Reset Camera</button>
     </div>
 
-    <video id="video" autoplay loop style="display:none;">
+    <video id="video" style="display:none;">
 			<source src="assets/video/alphatest-chroma.mp4">
 		</video>
 
