give each object its own video source

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,19 @@
       <button id="reset-camera">Reset Camera</button>
     </div>
 
-    <video id="video" style="display:none;">
+    <video id="video-0" style="display:none;">
+			<source src="assets/video/alphatest-chroma.mp4">
+		</video>
+
+    <video id="video-1" style="display:none;">
+			<source src="assets/video/alphatest-chroma.mp4">
+		</video>
+
+    <video id="video-2" style="display:none;">
+			<source src="assets/video/alphatest-chroma.mp4">
+		</video>
+
+    <video id="video-3" style="display:none;">
 			<source src="assets/video/alphatest-chroma.mp4">
 		</video>
 
