Add drone model and texture

--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,9 @@
   </head>
   <body>
     <div id="loading">
-      Loading
-      <div class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
-      </div>
+      <video id="video-0" style="display:none;">
+        <source src="assets/video/Planet_2432.mp4">
+      </video>
     </div>
     <div id="viewport"></div>
     <div id="hud">
