--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,16 @@
   </head>
   <body>
     <div id="loading">
-      Loading
-      <div class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
+      <div id="video-container">
+        <video id="loading-entrance" class="loading-videos" loop autoplay>
+          <source src="assets/video/Loading_01-IN-720p.mov">
+        </video>
+        <video id="loading-loop" class="loading-videos" loop>
+          <source src="assets/video/Loading_01-LOOP-720p.mov">
+        </video>
+        <video id="loading-exit" class="loading-videos" autoplay>
+          <source src="assets/video/Loading_01-OUT-720p.mov">
+        </video>
       </div>
     </div>
     <div id="viewport"></div>
@@ -35,51 +40,6 @@
     <video id="video-3" style="display:none;">
 			<source src="assets/video/Fleet_Sednese.mp4">
 		</video>
-
-    <script id="glowVertexShader" type="x-shader/x-vertex">
-      uniform vec3 viewVector;
-      uniform float c;
-      uniform float p;
-      varying float intensity;
-      void main() 
-      {
-        vec3 vNormal = normalize( normalMatrix * normal );
-        vec3 vNormel = normalize( normalMatrix * viewVector );
-        // incorrect intensity = pow( c - dot(vNormal, vNormel), p );
-        intensity = pow( abs(c - dot(vNormal, vNormel) ), p );
-
-        gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-      }
-    </script>
-
-    <script id="glowFragmentShader" type="x-shader/x-vertex"> 
-      uniform vec3 glowColor;
-      varying float intensity;
-      void main() 
-      {
-        vec3 glow = glowColor * intensity;
-        gl_FragColor = vec4( glow, 1.0 );
-      }
-    </script>
-
-    <script id="vertexAtmosphereGlow" type="x-shader/x-vertex">
-    varying vec3 vNormal;
-    void main() 
-    {
-        vNormal = normalize( normalMatrix * normal );
-        gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-    }
-    </script>
-
-    <!-- fragment shader a.k.a. pixel shader -->
-    <script id="fragmentAtmosphereGlow" type="x-shader/x-vertex"> 
-    varying vec3 vNormal;
-    void main()
-    {
-      float intensity = pow( 0.7 - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), 4.0 ); 
-        gl_FragColor = vec4( 1.0, 1.0, 1.0, 1.0 ) * intensity;
-    }
-    </script>
 
     <script id="chromaKeyVertexShader" type="x-shader/x-vertex">
       varying vec2 vUv;
