--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,13 @@
   <body>
     <div id="loading">
       <div id="video-container">
-        <video id="loading-entrance" class="loading-videos" loop autoplay>
+        <video id="loading-entrance" class="loading-videos">
           <source src="assets/video/Loading_01-IN-720p.mov">
         </video>
         <video id="loading-loop" class="loading-videos" loop>
           <source src="assets/video/Loading_01-LOOP-720p.mov">
         </video>
-        <video id="loading-exit" class="loading-videos" autoplay>
+        <video id="loading-exit" class="loading-videos">
           <source src="assets/video/Loading_01-OUT-720p.mov">
         </video>
       </div>
