Add background music track

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
+
+    <audio src="assets/Space Ambient (Bismuth - Fouram intro).mp3" loop="true"></audio>
+
     <div id="loading">
       <video id="video-0" style="display:none;">
         <source src="assets/video/Planet_2432.mp4">
