update page title

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Virtual Reality UI</title>
+    <title>Training Module v542.238.125 | Holocorp</title>
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
