play background music after app initalization

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <audio src="assets/Space Ambient (Bismuth - Fouram intro).mp3" loop="true"></audio>
+    <audio src="assets/Space Ambient (Bismuth - Fouram intro).mp3" loop="true" id="background-music"></audio>
 
     <div id="loading">
       <div id="video-container">
