--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
       }
     </script>
 
-    <script type="text/javascript" src="libs/three.js"></script>
+    <script type="text/javascript" src="libs/three.min.js"></script>
     <script type="text/javascript" src="libs/OrbitControls.js"></script>
     <script type="text/javascript" src="libs/leap-0.6.4.js"></script>
     <script type="text/javascript" src="libs/leap-plugins-0.1.11pre.js"></script>
