use minified libs

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 
     <script type="text/javascript" src="libs/three.min.js"></script>
     <script type="text/javascript" src="libs/OrbitControls.js"></script>
-    <script type="text/javascript" src="libs/leap-0.6.4.js"></script>
+    <script type="text/javascript" src="libs/leap-0.6.4.min.js"></script>
     <script type="text/javascript" src="libs/leap-plugins-0.1.11pre.js"></script>
     <script type="text/javascript" src="libs/VRRenderer.js"></script>
     <script type="text/javascript" src="libs/DDSLoader.js"></script>
