add meta tag description

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Training Module v542.238.125 | Holocorp</title>
+    <meta name="description" content="WebGL Demo - Space combat training simular. Click to inspect objects or use Leap Motion to grab them.">
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
