--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Training Module v542.238.125 | Holocorp</title>
-    <meta name="description" content="WebGL Demo - Space combat training simular. Click to inspect objects or use Leap Motion to grab them.">
+    <meta name="description" content="WebGL Demo - Space combat training simular. Click to inspect objects or use Leap Motion to grab them. Thomas Street Labs.">
     <meta name="keywords" content="webgl, leap motion, webvr, oculus rift, virtual reality, erdan, erdanese, sedna, sedanese">
     <link rel="stylesheet" href="styles/index.css">
+
+    <script>
+      // Only track if Thomas Street domain
+      if (document.location.hostname.search("thomasstreet")) {
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-49963269-1', 'auto');
+        ga('send', 'pageview', {
+          'page': location.pathname + location.search  + location.hash
+        });
+      }
+    </script>
   </head>
   <body>
     <div id="loading">
