add preload tag to html5 videos

--- a/app/index.html
+++ b/app/index.html
@@ -41,19 +41,19 @@
       <button id="reset-camera">Reset Camera</button>
     </div>
 
-    <video id="video-0" style="display:none;">
+    <video id="video-0" style="display:none;"  preload="auto">
 			<source src="assets/video/Planet_2432.mp4">
 		</video>
 
-    <video id="video-1" style="display:none;">
+    <video id="video-1" style="display:none;" preload="auto">
 			<source src="assets/video/Planet_NewSedna.mp4">
 		</video>
 
-    <video id="video-2" style="display:none;">
+    <video id="video-2" style="display:none;" preload="auto">
 			<source src="assets/video/Fleet_Erdan.mp4">
 		</video>
 
-    <video id="video-3" style="display:none;">
+    <video id="video-3" style="display:none;" preload="auto">
 			<source src="assets/video/Fleet_Sednese.mp4">
 		</video>
 
