Use mp4 rather than mov

--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,13 @@
     <div id="loading">
       <div id="video-container">
         <video id="loading-entrance" class="loading-videos">
-          <source src="assets/video/Loading_01_BLK_IN-720p.mov">
+          <source src="assets/video/Loading_01_BLK_IN-720p.mp4">
         </video>
         <video id="loading-loop" class="loading-videos" loop>
-          <source src="assets/video/Loading_01_BLK_LOOP-720p.mov">
+          <source src="assets/video/Loading_01_BLK_LOOP-720p.mp4">
         </video>
         <video id="loading-exit" class="loading-videos">
-          <source src="assets/video/Loading_01_BLK_OUT-720p.mov">
+          <source src="assets/video/Loading_01_BLK_OUT-720p.mp4">
         </video>
       </div>
     </div>
