add code for showing warning toast

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,12 @@
 
     <div id="viewport"></div>
 
+    <div id="warning-toast">
+      This demo works best on Chrome using the Leap Motion.
+
+      <button>OK</button>
+    </div>
+
     <div id="hud">
       <button id="vr-toggle">Toggle VR</button>
       <button id="reset-camera">Reset Camera</button>
