--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,8 @@
 
     <div id="viewport"></div>
 
-    <div id="warning-toast">
-      This demo works best on Chrome using the Leap Motion.
-
+    <div id="warning-popup">
+      This demo works best on Chrome or Firefox using the Leap Motion.
       <button>OK</button>
     </div>
 
