add warning-popup asset

--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,7 @@
 
     <div id="viewport"></div>
 
-    <div id="warning-popup">
-      This demo works best on Chrome or Firefox using the Leap Motion.
-      <button>OK</button>
-    </div>
+    <div id="warning-popup"></div>
 
     <div id="hud">
       <button id="vr-toggle">Toggle VR</button>
