fix meta description

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Training Module v542.238.125 | Holocorp</title>
-    <meta name="description" content="WebGL Demo - Space combat training simular. Click to inspect objects or use Leap Motion to grab them. Thomas Street Labs.">
+    <meta name="description" content="WebGL Demo - Space training module. Click to inspect objects or use the Leap Motion to grab them. Thomas Street Labs.">
     <meta name="keywords" content="webgl, leap motion, webvr, oculus rift, virtual reality, erdan, erdanese, sedna, sedanese">
     <link rel="stylesheet" href="styles/index.css">
 
