--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 			<source src="assets/video/Fleet_Sednese.mp4">
 		</video>
 
-    <audio src="assets/Space Ambient (Bismuth - Fouram intro).mp3" loop="true" id="background-music"></audio>
+    <audio src="assets/Gallery_Six_-_02_-_hydroscope.mp3" loop="true" id="background-music"></audio>
 
     <script id="chromaKeyVertexShader" type="x-shader/x-vertex">
       varying vec2 vUv;
