--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,23 @@
 
     <div id="warning-popup"></div>
 
-    <div id="hud">
+    <div id="info">
+      <div id="thomas-street">
+        <a href="http://thomasstreet.com">
+          <img src="assets/icon_rocket_2x.png"/>built by Thomas Street
+        </a>
+      </div>
+      <div id="github">
+        <a href="https://github.com/thomasstreet/space-training-module">
+          <img src="assets/icon_github_2x.png"/>GitHub
+        </a>
+      </div>
+      <div id="music-attribution">
+        <img src="assets/icon_microscope_2x.png"/>music is "hydroscope" by Gallery Six
+      </div>
+    </div>
+
+    <div id="controls">
       <button id="vr-toggle">Toggle VR</button>
       <button id="reset-camera">Reset Camera</button>
     </div>
