add a popup to hint leap users to hold more than one object

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,11 @@
 
     <div id="warning-popup"></div>
 
+    <div id="hint-popup">
+      Hint: try holding more than one object&hellip;
+      <div class="close">x</div>
+    </div>
+
     <div id="info">
       <div id="thomas-street">
         <a href="http://thomasstreet.com">
